--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,11 @@
   "routes": [
     {
       "src": "/api/(,*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "UPDATE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     },
     {
       "src": "/(.*)",
