--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,9 +11,12 @@
       "src": "/api/(,*)",
       "dest": "/api/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "UPDATE", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
     },
     {
       "src": "/(.*)",
