--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,17 +10,20 @@
     {
       "src": "/api/(,*)",
       "dest": "/api/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "UPDATE", "OPTIONS"],
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        }
-      ]
+      "methods": ["GET", "POST", "PUT", "DELETE", "UPDATE", "OPTIONS"]
     },
+
     {
       "src": "/(.*)",
       "dest": "/api/index.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/*",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
