--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,21 +9,12 @@
   "routes": [
     {
       "src": "/api/(,*)",
-      "dest": "/api/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "UPDATE", "OPTIONS"]
+      "dest": "/api/index.js"
     },
 
     {
       "src": "/(.*)",
       "dest": "/api/index.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/*",
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
     }
   ]
 }
