vercel.json changes toh headers

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,10 +11,15 @@
       "src": "/api/(,*)",
       "dest": "/api/index.js"
     },
-
     {
       "src": "/(.*)",
       "dest": "/api/index.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
     }
   ]
 }
