--- a/server/vercel.json
+++ b/server/vercel.json
@@ -19,7 +19,12 @@
   "headers": [
     {
       "source": "/api/(.*)",
-      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://enchanting-entremet-1fafa2.netlify.app/"
+        }
+      ]
     }
   ]
 }
