vercel.json change

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,23 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(,*)",
+      "src": "/api/(.*)",
       "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
       "dest": "/api/index.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://enchanting-entremet-1fafa2.netlify.app/"
-        }
-      ]
     }
   ]
 }
